--- a/index.css
+++ b/index.css
@@ -1,1 +1,216 @@
-zretzertzr
+.test
+{
+    border: 1px solid black;
+}
+
+
+body
+{
+    background: rgb(235,235,235);
+}
+
+#main
+{
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 5%;
+    padding-top: 5%;
+    background: rgb(235,235,235);
+}
+
+/**  Tim Profile **/
+
+#tim
+{
+    border-radius: 50%;
+    border: 2px solid rgb(235,235,235);
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 150px;
+    max-height: 150px;
+    margin-top: 5%;
+
+    
+}
+#name
+{
+    text-align: center;
+    color: rgb(221,85,85);
+    font-family: 'Open Sans Bold 700', sans-serif;
+    
+
+   
+
+   
+
+}
+#commit
+{
+    text-align: center;
+    color: rgb(125,125,125);
+}
+.about
+{
+    text-align: justify;
+    color: rgb(125,125,125);
+    padding-left: 25px;
+    padding-right: 25px;
+    font-size: 23px;
+    line-height: 30px;
+    margin-bottom: 14px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.spStrong
+{
+    font-weight: bolder;
+}
+#viewBtn
+{
+    background: rgb(221,85,85);
+    color: white;
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 4px;
+    border-color: rgb(221,85,85);
+    padding: 8px;
+    margin-bottom: 35px;
+    
+    
+   
+}
+#viewBtn:hover
+{
+    box-shadow: 2px 2px grey;
+}
+#linkWiki
+{
+    color: white;
+    text-decoration: none;
+    font-size : large;
+    font-family: 'Open Sans Regular 400';
+    
+}
+
+
+/**  Tim share media **/
+
+#wrapMedia
+{
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 10%;
+    padding-bottom: 10%;
+   
+
+}
+
+.mediaElts
+{
+    width: 100%;
+
+}
+
+.mediaImg
+{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+
+}
+
+#fb
+{
+    height: 27px;
+    width: 14px;
+}
+
+#linkedin
+{
+    height: 27px;
+    width: 24px;
+}
+.mediaTitle
+{
+    text-align: center;
+    color: rgb(210,216,219);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: lighter;
+    margin-top: 4px;
+    padding-top: 0px;
+}
+
+
+#movies
+{
+    text-align: center;
+    color: rgb(125,125,125);
+    word-spacing: 2px;
+    margin-top: 25px;
+    margin-bottom: 45px;
+}
+
+.highlight {
+    background-color:  rgb(212,212,212);
+    
+}
+
+.wrapMovies
+{
+    display: flex;
+    margin-top: 25px;
+    padding-left: 25px;
+}
+
+.boxElts
+{
+    width: 50%;
+    margin-left: 25%;
+    margin-right: 25%;
+    height: auto;
+    margin-bottom: 5%;
+    margin-top: 5%;
+    background: white;
+    border: 1px solid  rgb(215,215,215);
+    border-radius: 5px;
+    
+    
+}
+.moviesPic
+{
+    min-width: 141px;
+    max-width: 141px;
+}
+#moviesBox
+{
+    padding-bottom: 100px;
+}
+
+
+
+.moviesTitles
+{
+    text-align: center;
+    color: rgb(125,125,125);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bolder;
+}
+
+.moviesTxt
+{
+    word-spacing: 5px;
+    color: rgb(125,125,125);
+    text-align: justify;
+    padding: 16px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    line-height: 30px;
+    font-size: large;
+}
